# AgenticAnalyst

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  Dockerfile  TODO.md  alembic.ini  compose.yaml  pyproject.toml
.github/: git_notes_template.md  pull_request_template.md
.github/workflows/: ci.yml  code-health-remediation.md  doc-freshness-audit.md  doc-freshness-remediation.md
alembic/: env.py
alembic/versions/: 00f3ae192a5a_add_topic_and_topic_id_fks.py  6b135f7a55de_add_source_feed_ingestion_attempt_and_.py  963e5ab691b1_initial_durable_schema_no_claim_event_.py  b8e4c1a09f3d_composite_topic_uniqueness.py
docker/: app-entrypoint.sh
docs/: agent-harness.md  architecture.md  changelog.md  commands.md  database.md  index.md  insights.md  patterns.md  testing.md
docs/iterations/active/: 2026-07-16-topic-first-analyst-plan.md  2026-07-16-topic-first-analyst.md
docs/iterations/archive/: 2026-07-10-harness-design.md  2026-07-10-technical-harness-implementation.md  2026-07-11-runtime-persistence-repair.md  2026-07-13-rss-daily-brief.md  2026-07-15-archive-retrieval.md  2026-07-15-eval-harness-parity.md  2026-07-15-ui-brief-viewer.md  2026-07-15-weekly-monthly-brief.md  2026-07-16-product-ui-refinement.md  2026-07-16-topic-first-analyst.md  2026-07-17-multi-topic-source-sharing.md
docs/superpowers/plans/: 2026-07-10-technical-harness.md  2026-07-11-runtime-persistence-repair.md  2026-07-13-rss-daily-brief.md  2026-07-15-archive-retrieval.md  2026-07-15-ui-brief-viewer.md  2026-07-15-weekly-monthly-brief.md  2026-07-16-product-ui-refinement.md  (+2 more)
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  api.ts
searxng/: entrypoint.sh  settings.yml
src/analyst_engine/: __init__.py  config.py  main.py  runtime.py  scheduling.py
tests/: conftest.py  fixtures.py  test_compose_structure.py  test_config.py
tests/api/: conftest.py  test_archive_search.py  test_briefs.py  test_ingestion.py  test_pipelines.py  test_readiness.py  test_readiness_checks.py  test_sources.py  test_topic_assist.py  test_topics.py  test_ui_mount.py
tests/evaluation/: __init__.py  temporal_runner.py  test_temporal_holdout.py
tests/integration/: __init__.py  conftest.py  test_archive_retrieval.py  test_daily_pipeline.py  test_ingestion_concurrency.py  test_periodic_brief_pipeline.py  test_persistence.py  test_topic_scoped_pipeline.py  test_workflow_run_concurrency.py
tests/unit/: test_article_batcher.py  test_batch_summarizer.py  test_bounded_http.py  test_daily_brief_pipeline.py  test_dashscope.py  test_domain_models.py  test_extractor.py  test_feed_client.py  test_feed_parser.py  test_file_extractor.py  test_html_clean.py  test_ingestion_service.py  test_openrouter.py  test_periodic_brief_pipeline.py  test_process_modes.py  test_repositories_api.py  test_repositories_pipeline.py  test_repositories_rss.py  test_repositories_topics.py  test_runtime.py  test_scheduling.py  test_topic_matcher.py  test_topic_prompts.py  test_url_canonicalizer.py  test_workflow_graphs.py  test_workflow_run_repository.py  test_workflow_runner.py
(+62 files in other folders)
