[project]
name = "analyst-engine"
version = "0.1.0"
description = "Durable analytical-agent system for briefing workflows"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
]

[dependency-groups]
dev = [
    "mypy>=1.14",
    "pre-commit>=4.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analyst_engine"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["analyst_engine"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=src/analyst_engine --cov-report=term-missing"

[tool.coverage.run]
source = ["src/analyst_engine"]
branch = true
