[project]
name = "analyst-engine"
version = "0.1.0"
description = "Durable analytical-agent system for briefing workflows"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.13",
    "apscheduler>=3.10",
    "asyncpg>=0.29",
    "crawl4ai>=0.7",
    "fastapi>=0.110",
    "httpx>=0.27",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langsmith>=0.1",
    "openai>=1.30",
    "pgvector>=0.3",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "playwright>=1.52",
    "psycopg[binary]>=3.2",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.29",
]

[dependency-groups]
dev = [
    "freezegun>=1.5",
    "jsonpatch>=1.33",
    "mypy>=1.14",
    "pre-commit>=4.0",
    "pyyaml>=6.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "testcontainers>=4.0",
    "types-pyyaml>=6.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analyst_engine"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["analyst_engine"]
plugins = ["pydantic.mypy"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "tests.evaluation.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "fixtures"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.fixtures"
ignore_errors = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=src/analyst_engine --cov-report=term-missing"

[tool.coverage.run]
source = ["src/analyst_engine"]
branch = true
